[FIX] sap.m.ObjectStatus: fixed word wrapping
* there were situations where whole words were broken if the space
for ObjectStatus wasn't enough.

* Now wrapping is fixed

BCP: 2270100806

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -82,7 +82,8 @@
 }
 
 .sapMObjStatusText {
-	word-break: break-word;
+	word-break: normal;
+	overflow-wrap: break-word;
 }
 
 .sapMObjStatus > .sapMObjStatusTitle {
